--- a/Email_Spam_Detection_Model (1).ipynb
+++ b/Email_Spam_Detection_Model (1).ipynb
@@ -1623,7 +1623,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# Set your ngrok authentication token\n",
-        "NGROK_AUTH_TOKEN = \"2oZlSBbJEDOK9wuWQyq4n3PumWA_6wAwkpDus6zrsfAhi4Dcf\"\n",
+        "NGROK_AUTH_TOKEN = \"#\"\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)\n",
         "\n",
         "# Feedback file\n",
@@ -1938,7 +1938,7 @@
         "import joblib\n",
         "\n",
         "# Set your ngrok authentication token\n",
-        "NGROK_AUTH_TOKEN = \"2oZlSBbJEDOK9wuWQyq4n3PumWA_6wAwkpDus6zrsfAhi4Dcf\"\n",
+        "NGROK_AUTH_TOKEN = \"#\"\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)\n",
         "\n",
         "# Feedback file\n",
@@ -2311,7 +2311,7 @@
         "import joblib\n",
         "\n",
         "# Set your ngrok authentication token\n",
-        "NGROK_AUTH_TOKEN = \"2oZlSBbJEDOK9wuWQyq4n3PumWA_6wAwkpDus6zrsfAhi4Dcf\"\n",
+        "NGROK_AUTH_TOKEN = \"#\"\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)\n",
         "\n",
         "# Feedback file\n",
